Fixed modal was behind the menu bar

--- a/src/components/styles/movieModal.css
+++ b/src/components/styles/movieModal.css
@@ -5,7 +5,7 @@
   left: 0;
   top: 0;
   display: flex;
-  z-index: 999;
+  z-index: 1002;
   justify-content: center;
   align-items: center;
   padding: 0.5em;
